--- a/.github/workflows/checkmarx-analysis.yml
+++ b/.github/workflows/checkmarx-analysis.yml
@@ -27,7 +27,8 @@ jobs:
       uses: checkmarx-ts/checkmarx-cxflow-github-action@v1.0
       with:
         project: SQLiDemo
-        params: --checkmarx.version=9.0 --incremental=False --incremental-num-scans=1
+        params: --checkmarx.version=9.0
+        incremental: false
         team: '/CxServer'
         checkmarx_url: ${{ secrets.CHECKMARX_URL }}
         checkmarx_username: ${{ secrets.CHECKMARX_USERNAME }}
