--- a/.github/workflows/checkmarx-scan-on-push.yml
+++ b/.github/workflows/checkmarx-scan-on-push.yml
@@ -40,7 +40,7 @@ jobs:
       with:
         project: GitHub-SQLiDemo-${{ steps.get-branch.outputs.branch }}
         team: /CxServer/SP/ANZ/SQLiDemo
-        preset: 'Checkmarx Express'
+        preset: 'Checkmarx Default'
         checkmarx_url: ${{ secrets.CHECKMARX_URL }} # To be stored in GitHub Secrets.
         checkmarx_username: ${{ secrets.CHECKMARX_USERNAME }} # To be stored in GitHub Secrets.
         checkmarx_password: ${{ secrets.CHECKMARX_PASSWORD }} # To be stored in GitHub Secrets.
@@ -50,7 +50,7 @@ jobs:
         break_build: false
         scanners: sast
         bug_tracker: Sarif
-        params: --namespace=${{ github.repository_owner }} --repo-name=${{ github.event.repository.name }} --branch=${{ github.ref }}
+        params: --namespace=${{ github.repository_owner }} --repo-name=${{ github.event.repository.name }} --branch=${{ github.ref }} --severity=High --severity=Medium --severity=Low --severity=Informational
     
     #Upload SARIF file so it gets reflected in the "Code Scanning Alerts" tab
     - name: Upload SARIF file
